# graph-rag-trials

./: .gitignore  LICENSE  NER_Entity_Extraction_Analysis.md  README.md  analyze_milvus.py  clean_duplicates.py  cleanup_milvus.py  debug_toc.py  docker-compose.yml  main.py  pyproject.toml  sample_chunks.json  tat -an  findstr 5000  workflow_diagram.md
.claude/: settings.local.json
BIER/: README.md  beir_evaluator.py  config_utils.py  graph_rag_adapter.py  quick_start.py  requirements.txt
BIER/config/: eval_config.yaml
backup-rag-ui/: app.py  conversation_history.json  main.css
evals/: README.md
evals/BIER/: README.md  config_utils.py  graph_rag_adapter.py  hotpotqa_evaluator.py  run_evaluation.py
naive-rag/: README.md  __init__.py  config.py  core.py  formatting.py  llm.py  retrieval.py
naive-rag/re-rankers/: RERANKING_INTEGRATION.md  __init__.py  base.py  bge_reranker.py  config.py  reranker_model.py
output/: processing_summary.txt
rag-ui/: app.py  conversation_history.json  index.html  main.css  main.js
src/chunking/: core.py  embeddings.py  models.py  preprocessor.py
tests/: test_models.py
vector-ingest/: .env.example  Chunking 101.md  Complete_Strategic_Chunking_Analysis.md  MILVUS_SETUP.md  README.md  Strategic_Chunking_Analysis_Independent.md  main.py  requirements_embeddings.txt  sample_test_debug.json  sample_with_full_metadata.json  setup_milvus.py
vector-ingest/elasticsearch-embeddings/: dump_elasticsearch_chunks.py  elasticsearch_client.py  main_elasticsearch.py
vector-ingest/output/: processed_chunks.json  processing_summary.txt
(+51 files in other folders)
